--- a/Ninja/Ninja.vcxproj.filters
+++ b/Ninja/Ninja.vcxproj.filters
@@ -118,6 +118,9 @@
     <ClCompile Include="Blood.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="PlayerShuriken.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="FrameAnimation.h">
@@ -244,6 +247,9 @@
       <Filter>Header Files</Filter>
     </ClInclude>
     <ClInclude Include="Blood.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="PlayerShuriken.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
