--- a/Ninja/Ninja.vcxproj
+++ b/Ninja/Ninja.vcxproj
@@ -92,6 +92,7 @@
     <ClCompile Include="BaseObject.cpp" />
     <ClCompile Include="Boss.cpp" />
     <ClCompile Include="BossBomb.cpp" />
+    <ClCompile Include="BossExplosion.cpp" />
     <ClCompile Include="ShurikenItem.cpp" />
     <ClCompile Include="Bird.cpp" />
     <ClCompile Include="BlueBlood.cpp" />
@@ -147,6 +148,7 @@
     <ClInclude Include="BaseObject.h" />
     <ClInclude Include="Boss.h" />
     <ClInclude Include="BossBomb.h" />
+    <ClInclude Include="BossExplosion.h" />
     <ClInclude Include="ShurikenItem.h" />
     <ClInclude Include="Bird.h" />
     <ClInclude Include="BlueBlood.h" />
